--- a/com_control/CMakeLists.txt
+++ b/com_control/CMakeLists.txt
@@ -1,6 +1,8 @@
 include_directories(include)
 link_directories(lib)
 
+add_compile_options(-O2)
+
 add_library(com_control SHARED
     src/controller.cpp
     src/listener.cpp
