--- a/crobot/CMakeLists.txt
+++ b/crobot/CMakeLists.txt
@@ -1,10 +1,13 @@
+cmake_minimum_required(VERSION 3.0.2)
+project(crobot)
+
 find_package(CSerialPort REQUIRED)
 
 include_directories(include ${CSerialPort_INCLUDE_DIR})
 
 add_compile_options(-O2)
 
-add_library(com_control SHARED
+add_library(crobot SHARED
     src/controller.cpp
     src/data_parser.cpp
     src/listener.cpp
@@ -13,4 +16,4 @@ add_library(com_control SHARED
     src/message/utils.cpp
 )
 
-target_link_libraries(com_control ${CSerialPort_LIBRARY})
+target_link_libraries(crobot ${CSerialPort_LIBRARY})
