--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
   nav_msgs
   message_generation
+  tf2_ros
 )
 
 add_subdirectory(crobot)
@@ -108,7 +109,7 @@ add_subdirectory(crobot)
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES crobot_control
-  CATKIN_DEPENDS roscpp std_msgs geometry_msgs nav_msgs message_runtime
+  CATKIN_DEPENDS roscpp std_msgs geometry_msgs nav_msgs message_runtime tf2_ros
 #  DEPENDS system_lib
 )
 
